[package]
name = "now_importer"
version = "0.2.0"
authors = ["Mike Engel <mike@mike-engel.com>"]
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "1"
log = "0.4"
sha-1 = "0.8"
base64 = "0.10"
reqwest = "0.9"

[lib]
name = "now_importer"
path = "src/lib.rs"
